--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,12 +107,12 @@ body {
 }
 
 ::selection {
-  background: #ff4713;
+  background: #ca2127;
   color: #fff;
 }
 
 ::-moz-selection {
-  background: #ff4713;
+  background: #ca2128;
   color: #fff;
 }
 
@@ -319,14 +319,14 @@ a.main-button-slider {
 }
 
 a.main-button-slider:hover {
-  background-color: #ff4713;
+  background-color: #ca2128;
 }
 
 a.main-button {
   font-size: 13px;
   border-radius: 20px;
   padding: 12px 20px;
-  background-color: #ff4713;
+  background-color: #ca2128;
   text-transform: uppercase;
   color: #fff;
   letter-spacing: 0.25px;
@@ -337,7 +337,7 @@ a.main-button {
 }
 
 a.main-button:hover {
-  background-color: #ff4713;
+  background-color: #ca2128;
 }
 
 button.main-button {
@@ -358,7 +358,7 @@ button.main-button {
 }
 
 button.main-button:hover {
-  background-color: #ff4713;
+  background-color: #ca2128;
 }
 
 
@@ -442,7 +442,7 @@ header
 }
 
 .header-area .main-nav .nav li a:hover {
-  color: #ff4713;
+  color: #ca2128;
 }
 
 .header-area .main-nav .menu-trigger {
@@ -554,7 +554,7 @@ header
 }
 
 .header-area.header-sticky .nav li a.active {
-  color: #ff4713;
+  color: #ca2128;
 }
 
 @media (max-width: 1200px) {
@@ -763,7 +763,7 @@ features
 }
 
 .features-small-item:hover .icon {
-  background-color: #ff4713;
+  background-color: #ca2128;
 }
 
 .features-small-item .icon {
@@ -1169,7 +1169,7 @@ team
   display: block;
   font-weight: 400;
   font-size: 15px;
-  color: #ff4713;
+  color: #ca2128;
   letter-spacing: 0.25px;
 }
 
@@ -1208,7 +1208,7 @@ pricing
 }
 
 .pricing-item.active .pricing-body .price-wrapper {
-  background-color: #ff4713;
+  background-color: #ca2128;
 }
 
 .pricing-item.active .pricing-body .price-wrapper .currency {
@@ -1345,7 +1345,7 @@ blog
 }
 
 .blog-post-thumb h3 a:hover {
-  color: #ff4713;
+  color: #ca2128;
 }
 
 .blog-post-thumb .text {
@@ -1468,7 +1468,7 @@ footer .social li a {
 }
 
 footer .social li a:hover {
-  background-color: #ff4713;
+  background-color: #ca2128;
   color: #fff;
 }
 
@@ -1671,7 +1671,7 @@ preloader
 }
 
 .nav li .dropdown li a:hover {
-  color: #ff4713;
+  color: #ca2128;
   background: #f1f1f1;
 }
 
